@@ -21,8 +21,7 @@ var Connection = exports.Connection = function(id, socketOptions) {
   //
   // Connection parsing state
   //
-  
-  this.maxBsonSize = socketOptions.maxBsonSize ? socketOptions.maxBsonSize : global.DEFAULT_MAX_BSON_SIZE;  
+  this.maxBsonSize = socketOptions.maxBsonSize ? socketOptions.maxBsonSize : Connection.DEFAULT_MAX_BSON_SIZE;  
   // Contains the current message bytes
   this.buffer = null;
   // Contains the current message size
@@ -85,7 +84,7 @@ Connection.prototype.start = function() {
     // Create a new stream
     this.connection = new net.Stream();
     // // Create new connection instance
-    // this.connection = new net.Socket();
+    this.connection = new net.Socket();
     // Set options on the socket
     this.connection.setTimeout(this.socketOptions.timeout);
     this.connection.setNoDelay(this.socketOptions.noDelay);
@@ -179,6 +178,9 @@ var createDataHandler = exports.Connection.createDataHandler = function(self) {
   // We need to handle the parsing of the data
   // and emit the messages when there is a complete one
   return function(data) {
+    // console.log("----------------------------------------------------------- DATA :: " + data.length)
+    // console.dir(data.toString('hex'))
+    
     // Parse until we are done with the data
     while(data.length > 0) {
       // If we still have bytes to read on the current message
@@ -255,6 +257,9 @@ var createDataHandler = exports.Connection.createDataHandler = function(self) {
           if(data.length > 4) {
             // Retrieve the message size
             var sizeOfMessage = binaryutils.decodeUInt32(data, 0);
+            // console.log("=================================================== parse sizeOfMessage")
+            // console.dir(sizeOfMessage)
+            
             // If we have a negative sizeOfMessage emit error and return
             if(sizeOfMessage < 0 || sizeOfMessage > self.maxBsonSize) {
               var errorObject = {err:"socketHandler", trace:'', bin:self.buffer, parseState:{
@@ -266,6 +271,11 @@ var createDataHandler = exports.Connection.createDataHandler = function(self) {
               self.emit("parseError", errorObject, self);
               return;
             }
+
+            // console.log("--------------------------------------------------------------------")
+            // console.dir(sizeOfMessage)
+            // console.dir(self.maxBsonSize)
+            // console.dir(data.length)
 
             // Ensure that the size of message is larger than 0 and less than the max allowed
             if(sizeOfMessage > 4 && sizeOfMessage < self.maxBsonSize && sizeOfMessage > data.length) {
