@@ -52,7 +52,7 @@ var ConnectionPool = exports.ConnectionPool = function(host, port, poolSize, bso
 inherits(ConnectionPool, EventEmitter);
 
 ConnectionPool.prototype.setMaxBsonSize = function(maxBsonSize) {
-  if (typeof maxBsonSize == null){
+  if(maxBsonSize == null){
     maxBsonSize = Connection.DEFAULT_MAX_BSON_SIZE;
   }     
 
