@@ -170,7 +170,7 @@ Cursor.prototype.each = function(callback) {
     //FIX: stack overflow (on deep callback) (cred: https://github.com/limp/node-mongodb-native/commit/27da7e4b2af02035847f262b29837a94bbbf6ce2)
     process.nextTick(function(){
       // Fetch the next object until there is no more objects
-      self.nextObject(function(err, item) {
+      self.nextObject(function(err, item) {        
         if(err != null) return callback(err, null);
 
         if(item != null) {
@@ -506,7 +506,7 @@ Cursor.prototype.nextObject = function(callback) {
 Cursor.prototype.getMore = function(callback) {
   var self = this;
   var limit = 0;
-
+  
   if (!self.tailable && self.limitValue > 0) {
     limit = self.limitValue - self.totalNumberOfRecords;
     if (limit < 1) {
@@ -529,7 +529,7 @@ Cursor.prototype.getMore = function(callback) {
             var excessResult = self.totalNumberOfRecords - self.limitValue;
 
             if (excessResult > 0) {
-              result.documents.splice(-1*excessResult, excessResult);
+              result.documents.splice(-1 * excessResult, excessResult);
             }
           }
 
